[tool.poetry]
name = "flowutils"
version = "1.1.0b0"
description = "Flow Cytometry Standard Utilities"
authors = ["Scott White <whitews@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.build]
script = "build.py" 
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
setuptools = "^69.0.3"


[build-system]
requires = ["poetry-core", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"
